add another sentence

--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
 </head>
 <body>
  <h1>Welcome  ot Andela!</h1>
- <p>This is the 25th edition of bootcamp.</p>
+ <p>This is the 25th edition of bootcamp.
+ We are excite.</p>
 </body>
 </html>
